[gd_scene load_steps=5 format=2]

[ext_resource path="res://image/sprNave.png" type="Texture" id=1]
[ext_resource path="res://image/sprNaveSt.png" type="Texture" id=2]
[ext_resource path="res://Nave.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58.2911, 34.7069 )

[node name="Nave" type="Area2D"]
position = Vector2( 1195.45, 360 )
script = ExtResource( 3 )

[node name="SpNave" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
flip_h = true

[node name="SpNaveSt" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
flip_h = true

[node name="CsNave" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="NavCam" type="Camera2D" parent="."]
current = true
[connection signal="area_entered" from="." to="." method="_on_Nave_area_entered"]
